--- a/ВЕРСТКА/index.html
+++ b/ВЕРСТКА/index.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="info">
-                  <a href="" class="name"><p> ЖИВОПИСЬ ОТ 5 ЛЕТ</p></a>
+                  <a href="" class="name"><p> ЖИВОПИСЬ <br> ОТ 5 ЛЕТ</p></a>
                   <hr>
                   <a href="" class="pod"><p>подробнее</p></a>
                 </div>
@@ -58,13 +58,13 @@
         <div class="second_img">
 
             <div class="info">
-                <a href="" class="name"><p> ЖИВОПИСЬ ОТ 5 ЛЕТ</p></a>
+                <a href="" class="name"><p> СКУЛЬПТУРА <br> ОТ 5 ЛЕТ</p></a>
                 <hr>
                 <a href="" class="pod"><p>подробнее</p></a>
               </div>
               
             <div class="border_grey">
-               <img src="img/1.jpg" alt=""> 
+               <img src="img/2.jpg" alt=""> 
             </div>
 
           
@@ -72,11 +72,11 @@
 
     <div class="first_img third_block">
         <div class="border_grey">
-           <img src="img/1.jpg" alt=""> 
+           <img src="img/5.jpg" alt=""> 
         </div>
 
         <div class="info">
-          <a href="" class="name"><p> ЖИВОПИСЬ ОТ 5 ЛЕТ</p></a>
+          <a href="" class="name"><p> МАСТЕР-КЛАССЫ <br> ОТ 14 ЛЕТ</p></a>
           <hr>
           <a href="" class="pod"><p>подробнее</p></a>
         </div>
