--- a/ВЕРСТКА/cours.html
+++ b/ВЕРСТКА/cours.html
@@ -41,9 +41,9 @@
 
     <div class="footer_cours">
         <div class="social-icons">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="img/inst.png" alt="">
+            <img src="img/tg.png" alt="">
+            <img src="img/vk.png" alt="">
         </div>
     </div>
 
