почти готовый файл

--- a/ВЕРСТКА/history.html
+++ b/ВЕРСТКА/history.html
@@ -18,9 +18,9 @@
 
     <nav class="header__nav"> 
         <ul> 
-            <a href=""><li>Курсы</li></a> 
+            <a href="our_courses.html"><li>Курсы</li></a> 
             <a href=""><li>главная</li></a> 
-            <a href=""><li>наши преподаватели</li></a> 
+            <a href="index.html"><li>наши преподаватели</li></a> 
         </ul> 
     </nav> 
 
