--- a/ВЕРСТКА/index.html
+++ b/ВЕРСТКА/index.html
@@ -27,8 +27,8 @@
             <div class="nav__block">
                 <ul class="nav__ul">
                     
-                    <a href=""><li>История создания</li></a>
-                    <a href=""><li>КУРСЫ</li></a>
+                    <a href="history.html"><li>История создания</li></a>
+                    <a href="our_courses.html"><li>КУРСЫ</li></a>
                     <a href=""><li>наши ПРЕПОДАВАТЕЛИ</li></a>
                 </ul>
             </div>
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="info">
-                  <a href="" class="name"><p> ЖИВОПИСЬ <br> ОТ 5 ЛЕТ</p></a>
+                  <a href="cours.html" class="name"><p> ЖИВОПИСЬ <br> ОТ 5 ЛЕТ</p></a>
                   <hr>
                   <a href="" class="pod"><p>подробнее</p></a>
                 </div>
@@ -58,7 +58,7 @@
         <div class="second_img">
 
             <div class="info">
-                <a href="" class="name"><p> СКУЛЬПТУРА <br> ОТ 5 ЛЕТ</p></a>
+                <a href="cours.html" class="name"><p> СКУЛЬПТУРА <br> ОТ 5 ЛЕТ</p></a>
                 <hr>
                 <a href="" class="pod"><p>подробнее</p></a>
               </div>
@@ -76,7 +76,7 @@
         </div>
 
         <div class="info">
-          <a href="" class="name"><p> МАСТЕР-КЛАССЫ <br> ОТ 14 ЛЕТ</p></a>
+          <a href="cours.html" class="name"><p> МАСТЕР-КЛАССЫ <br> ОТ 14 ЛЕТ</p></a>
           <hr>
           <a href="" class="pod"><p>подробнее</p></a>
         </div>
@@ -85,7 +85,7 @@
 </div>
 
 <div class="btn">
-    <a href="" class="a_btn">Оставить заявку</a>
+    <a href="submit-app.html" class="a_btn">Оставить заявку</a>
 </div>
 
     </section>
