--- a/ВЕРСТКА/modal.html
+++ b/ВЕРСТКА/modal.html
@@ -16,13 +16,13 @@
 
             <div class="left-side_links">
                 <ul class="left-side_links__ul">
-                    <a href="" class="left-side_links__a"><li class="left-side_links__li">ГЛАВНАЯ</li></a>
-                    <a href="" class="left-side_links__a"><li class="left-side_links__li">КУРСЫ</li></a>
-                    <a href="" class="left-side_links__a"><li class="left-side_links__li">ИСТОРИЯ</li></a>
+                    <a href="index.html" class="left-side_links__a"><li class="left-side_links__li">ГЛАВНАЯ</li></a>
+                    <a href="our_courses.html" class="left-side_links__a"><li class="left-side_links__li">КУРСЫ</li></a>
+                    <a href="history.html" class="left-side_links__a"><li class="left-side_links__li">ИСТОРИЯ</li></a>
                     <a href="" class="left-side_links__a"><li class="left-side_links__li">ПРЕПОДАВАТЕЛИ</li></a>
-                    <a href="" class="left-side_links__a"><li class="left-side_links__li">РЕГИСТРАЦИЯ</li></a>
-                    <a href="" class="left-side_links__a"><li class="left-side_links__li">ЛИЧНЫЙ КАБИНЕТ</li></a>
-                    <a href="" class="left-side_links__a"><li class="left-side_links__li">ОСТАВИТЬ ЗАЯВКУ</li></a>
+                    <a href="registration.html" class="left-side_links__a"><li class="left-side_links__li">РЕГИСТРАЦИЯ</li></a>
+                    <a href="personal-area.html" class="left-side_links__a"><li class="left-side_links__li">ЛИЧНЫЙ КАБИНЕТ</li></a>
+                    <a href="submit-app.html" class="left-side_links__a"><li class="left-side_links__li">ОСТАВИТЬ ЗАЯВКУ</li></a>
                     <a href="" class="left-side_links__a"><li class="left-side_links__li">ВЫЙТИ</li></a>
                 </ul>
             </div>
