--- a/ВЕРСТКА/submit-app.html
+++ b/ВЕРСТКА/submit-app.html
@@ -11,7 +11,7 @@
         
         <img src="img/MODERN Art Studio.png" alt="">
 
-        <h1>РЕГИСТРАЦИЯ/ВХОД</h1>
+        <h1>ОСТАВИТЬ ЗАЯВКУ</h1>
     
 
         <nav class="header__nav">
@@ -25,7 +25,7 @@
 
     <div class="block-form">
 
-        <div class="form-block">
+        <div class="form-block submit-app__foorm">
             <form action="">
                 <label for="surname">
                     <input type="text" id="surname" class="form__input" placeholder="Фамилия">
@@ -43,15 +43,16 @@
                     <input type="password" id="pass" class="form__input" placeholder="Пароль">
                 </label>
 
-                <section class="form__input">
-                    <option value=""></option>
-                </section>
+                <select class="form__input">
+                    <option value="">Курсы</option>
+                    <option value="">Живопись</option>
+                    <option value="">Мастер-класс</option>
+                    <option value="">Творческие занятия</option>
+                    <option value="">Скетчинг</option>
+                    <option value="">Скульптура</option>
+                </select>
 
-                <button class="form-btns">ЗАРЕГИСТРИРОВАТЬСЯ</button>
-
-                <p>ЕСТЬ АККАУНТ?</p>
-
-                <button class="form-btns">ВОЙТИ В АККАУНТ</button>
+                <button class="form-btns reg__btn">ЗАРЕГИСТРИРОВАТЬСЯ</button>
             </form>
         </div>
 
