--- a/ВЕРСТКА/cours.html
+++ b/ВЕРСТКА/cours.html
@@ -16,8 +16,8 @@
 
         <nav class="header__nav">
             <ul>
-                <a href=""><li>История создания</li></a>
-                <a href=""><li>главная</li></a>
+                <a href="history.html"><li>История создания</li></a>
+                <a href="index.html"><li>главная</li></a>
                 <a href=""><li>наши преподаватели</li></a>
             </ul>
         </nav>
@@ -25,7 +25,7 @@
 
     <div class="main_cours">
         <div class="sqr">
-            <a href="" class="a_btn main_cours__btn">записаться на курс</a>
+            <a href="submit-app.html" class="a_btn main_cours__btn">записаться на курс</a>
         </div>
 
         <div class="bg-img">
