страница our_teachers и исправление страницы history

--- a/ВЕРСТКА/history.html
+++ b/ВЕРСТКА/history.html
@@ -18,9 +18,9 @@
 
     <nav class="header__nav"> 
         <ul> 
-            <a href="our_courses.html"><li>Курсы</li></a> 
+            <a href=""><li>Курсы</li></a> 
+            <a href=""><li>наши преподаватели</li></a> 
             <a href=""><li>главная</li></a> 
-            <a href="index.html"><li>наши преподаватели</li></a> 
         </ul> 
     </nav> 
 
@@ -33,7 +33,17 @@
             </div>
             <div class="right">
                 <div class="border"></div>
-                <div class="images"></div>
+                <div class="images"><img src="img/9.jpg" alt=""></div>
+            </div>
+        </div>
+
+        <div class="info_2">
+            <div class="left">
+                <div class="border"></div>
+                <div class="images"><img src="img/10.jpg" alt=""></div>
+            </div>
+            <div class="right">
+                Figma ipsum component variant main layer. Strikethrough font image library align pixel. Prototype flatten layer object plugin create follower pixel flatten. Auto editor ipsum connection main reesizing editor edit. Pencil editor font clip pencil frame component.
             </div>
         </div>
 
@@ -43,19 +53,25 @@
             </div>
             <div class="right">
                 <div class="border"></div>
-                <div class="images"></div>
+                <div class="images"><img src="img/11.jpg" alt=""></div>
             </div>
         </div>
+    </div> 
+    
+    <div class="btn_history">
+        <a href="" class="a_btn">
+        <img src="img/Vector.png" alt="">
+        НА ГЛАВНУЮ</a>
+    </div>
 
-        <div class="info_1">
-            <div class="left">
-                Figma ipsum component variant main layer. Strikethrough font image library align pixel. Prototype flatten layer object plugin create follower pixel flatten. Auto editor ipsum connection main reesizing editor edit. Pencil editor font clip pencil frame component.
-            </div>
-            <div class="right">
-                <div class="border"></div>
-                <div class="images"></div>
-            </div>
+    <div class="footer_cours">
+        <div class="social-icons">
+            <a href=""><img src="img/inst.png" alt=""></a>
+            <a href=""><img src="img/tg.png" alt=""></a>
+            <a href=""><img src="img/vk.png" alt=""></a>
         </div>
     </div>
+
+ 
 </body>
 </html>
