--- a/modern-2-main/cours.html
+++ b/modern-2-main/cours.html
@@ -30,7 +30,7 @@
 
         <div class="bg-img">
             <div class="text">
-                <p class="main-text">Занятия живописью способствуют развитию мелкой моторики, творческого мышления, развивают цветовое восприятие, чувства пространства, учат выражать в художественной форме свои мысли, вырабатывают усидчивость и концентрацию внимания!</p>
+                <p class="main-text">Figma ipsum component variant main layer. Strikethrough font image library align pixel. Prototype flatten layer object plugin create follower pixel flatten. Auto editor ipsum connection main reesizing editor edit. Pencil editor font clip pencil frame component.</p>
                 <p class="price">4800 рублей </p>
                 <hr>
             </div>
