--- a/modern-2-main/history.html
+++ b/modern-2-main/history.html
@@ -29,7 +29,7 @@
     <div class="main">
         <div class="info_1">
             <div class="left">
-                1 этап: После долгих этапов обсуждения дизайна и проектирования каркаса студии, мы воссоздали наши идею с 3D-визуализаторе «Blender»
+                Figma ipsum component variant main layer. Strikethrough font image library align pixel. Prototype flatten layer object plugin create follower pixel flatten. Auto editor ipsum connection main reesizing editor edit. Pencil editor font clip pencil frame component.
             </div>
             <div class="right">
                 <div class="border"></div>
@@ -43,13 +43,13 @@
                 <div class="images"><img src="img/10.jpg" alt=""></div>
             </div>
             <div class="right">
-                2 этап: Составили предварительную смету и приступили к закупке оборудования. Далее начали искать подходящие элементы декора для стилистики студии.
+                Figma ipsum component variant main layer. Strikethrough font image library align pixel. Prototype flatten layer object plugin create follower pixel flatten. Auto editor ipsum connection main reesizing editor edit. Pencil editor font clip pencil frame component.
             </div>
         </div>
 
         <div class="info_1">
             <div class="left">
-                3 этап: После закупки материалов и оборудования, мы полноправно начали всем пользоваться и активно проводить мастер-классы для всех возрастов!
+                Figma ipsum component variant main layer. Strikethrough font image library align pixel. Prototype flatten layer object plugin create follower pixel flatten. Auto editor ipsum connection main reesizing editor edit. Pencil editor font clip pencil frame component.
             </div>
             <div class="right">
                 <div class="border"></div>
