--- a/modern-2-main/our_teachers.html
+++ b/modern-2-main/our_teachers.html
@@ -31,9 +31,7 @@
         <div class="border">
             <div class="info_1">
                 <div class="left">
-                    Елена, 44 года
-                    Образование: Является членом союза художников Республики Башкортостан. Заслуженный художник, выставки проводятся в ВДНХ.
-
+                    Figma ipsum component variant main layer. Strikethrough font image library align pixel. Prototype flatten layer object plugin create follower pixel flatten. Auto editor ipsum connection main reesizing editor edit. Pencil editor font clip pencil frame component.
                 </div>
                 <div class="right">
                     <div class="border"></div>
@@ -47,8 +45,7 @@
                     <div class="images"><img src="img/14.jpg" alt=""></div>
                 </div>
                 <div class="right">
-                    Кристина, 18 лет 
-Образование: С отличием окончила ГБОУ РХГИ им. Касима Аскаровича Давлеткильдеева, обучалась в Сочи по направлению «Анималистика». Является лауреатом второй степени во Всероссийском течение молодых скульпторов.
+                    Figma ipsum component variant main layer. Strikethrough font image library align pixel. Prototype flatten layer object plugin create follower pixel flatten. Auto editor ipsum connection main reesizing editor edit. Pencil editor font clip pencil frame component.
                 </div>
             </div>    
         </div>
