--- a/modern-2-main/sign-in.html
+++ b/modern-2-main/sign-in.html
@@ -27,7 +27,7 @@
 
         <div class="form-block">
             <p class="reg">ВХОД</p>
-            <form action="personal-area.html">
+            <form action="index.html">
                 <label for="surname">
                     <input type="text" id="surname" class="form__input" placeholder="Фамилия">
                 </label>
